Initial implementation with Negotiate and SessionSetup support.
SessionSetup does not yet work as we need to add integration with
a kerberos library and get GSS/SPNEGO/NTLM blobs.
Right now, for testing, I just use a hardcoded dummy blob for the first
phase.

Example.smb2-ls.c contains example code for connect, negotiate and
session setup.

Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = lib include $(MAYBE_UTILS) . $(MAYBE_EXAMPLES)
+SUBDIRS = lib include . $(MAYBE_EXAMPLES)
 ACLOCAL_AMFLAGS = -I m4
 
 pkgconfigdir = $(libdir)/pkgconfig
