--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_PREREQ(2.50)
-AC_INIT([libnfs], [1.11.0], [ronniesahlberg@gmail.com])
+AC_INIT([libsmb2], [1.0.0], [ronniesahlberg@gmail.com])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([-Wall foreign subdir-objects])
 AC_CANONICAL_HOST
@@ -23,14 +23,6 @@ fi
 
 # We always want 64 bit file offsets
 CFLAGS="${CFLAGS} -D_FILE_OFFSET_BITS=64"
-
-#option: utils
-AC_ARG_ENABLE([utils],
-              [AC_HELP_STRING([--enable-utils],
-                              [Build util programs])],
-	      [MAYBE_UTILS=""],
-	      [MAYBE_UTILS="utils"])
-AC_SUBST(MAYBE_UTILS)
 
 #option: examples
 AC_ARG_ENABLE([examples],
@@ -71,36 +63,12 @@ if test "$ac_cv_have_popt" = yes ; then
   MAYBE_EXAMPLES="examples"
 else
   AC_MSG_RESULT(no)
-  AC_MSG_NOTICE(You need libpopt to compile the sample libnfs clients.)
+  AC_MSG_NOTICE(You need libpopt to compile the sample libsmb2 clients.)
   AC_MSG_NOTICE(Only the library will be compiled and installed.)
 fi
 fi
 
 AC_SUBST(MAYBE_EXAMPLES)
-
-AC_MSG_CHECKING(whether SO_BINDTODEVICE is available)
-AC_TRY_RUN([
-/*
- * Just see if we can compile with SO_BINDTODEVICE
- */
-#include <net/if.h>
-
-int main(int argc, const char *argv[])
-{
-        int i = SO_BINDTODEVICE;
-	return 0;
-}
-], ac_cv_have_so_bindtodevice=yes, ac_cv_have_so_bindtodevice=no,
-   [echo $ac_n "compile with SO_BINDTODEVICE. Assuming OK... $ac_c"
-    ac_cv_have_so_bindtodevice=yes])
-if test "$ac_cv_have_so_bindtodevice" = yes ; then
-  AC_MSG_RESULT(yes)
-  AC_DEFINE(HAVE_SO_BINDTODEVICE, 1, [Whether our sockets support SO_BINDTODEVICE])
-else
-  AC_MSG_RESULT(no)
-  AC_MSG_NOTICE(SO_BINDTODEVICE support for if= support is missing.)
-  AC_MSG_NOTICE(Compiling without if= support.)
-fi
 
 AC_ARG_ENABLE([werror], [AS_HELP_STRING([--disable-werror],
               [Disables building with -Werror by default])])
@@ -173,6 +141,10 @@ AC_CHECK_HEADERS([sys/statvfs.h])
 dnl Check for sys/socket.h
 AC_CHECK_HEADERS([sys/socket.h])
 
+# check for sys/uio.h
+dnl Check for sys/uio.h
+AC_CHECK_HEADERS([sys/uio.h])
+
 # check for netinet/tcp.h
 dnl Check for netinet/tcp.h
 AC_CHECK_HEADERS([netinet/tcp.h])
@@ -205,38 +177,14 @@ AC_CHECK_MEMBER([struct sockaddr_storage.ss_family],
 #include <sys/socket.h>
 ])
 
-# check for tevent + talloc
-AC_CACHE_CHECK([for talloc and tevent support],libnfs_cv_HAVE_TALLOC_TEVENT,[
-AC_TRY_COMPILE([
-#include <talloc.h>
-#include <tevent.h>],
-[struct tevent_context *ctx = tevent_context_init(NULL);
- int major = talloc_version_major();],
-libiscsi_cv_HAVE_TALLOC_TEVENT=yes,libiscsi_cv_HAVE_TALLOC_TEVENT=no)])
-if test x"$libiscsi_cv_HAVE_TALLOC_TEVENT" = x"yes"; then
-    AC_DEFINE(HAVE_TALLOC_TEVENT,1,[Whether we have talloc nad tevent support])
-fi
-AM_CONDITIONAL([HAVE_TALLOC_TEVENT], [test $libiscsi_cv_HAVE_TALLOC_TEVENT = yes])
-
-AC_CHECK_MEMBERS([struct stat.st_mtim.tv_nsec])
-
 # check where makedev is defined
 AC_HEADER_MAJOR
 
 #output
 AC_CONFIG_FILES([Makefile]
-                [doc/Makefile]
                 [include/Makefile]
                 [lib/Makefile]
-                [mount/Makefile]
-                [nfs/Makefile]
-                [nfs4/Makefile]
-                [nlm/Makefile]
-                [nsm/Makefile]
-                [portmap/Makefile]
-                [rquota/Makefile]
-                [utils/Makefile]
                 [examples/Makefile]
                )
 
-AC_OUTPUT([libnfs.pc])
+AC_OUTPUT([libsmb2.pc])
