--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,6 +1,8 @@
 smb2dir = $(includedir)/smb2
 dist_smb2_HEADERS = \
-	smb2/libsmb2.h
+	smb2/libsmb2.h \
+	smb2/smb2.h
 
 dist_noinst_HEADERS = \
-        libsmb2-private.h
+	libsmb2-private.h \
+	slist.h
