Add tree connect and do a major cleanup
Move all the session establish code from the example into a
new smb2_connect_share_async() flow in libsmb2.c

Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -5,5 +5,5 @@ AM_CPPFLAGS = \
 	-I$(abs_top_srcdir)/include/smb2 \
 	"-D_U_=__attribute__((unused))"
 
-COMMON_LIBS = ../lib/libsmb2.la -lpopt -lgssapi_krb5
+COMMON_LIBS = ../lib/libsmb2.la -lpopt
 smb2_ls_LDADD = $(COMMON_LIBS)
