Add a README file
Extract the low level API out into libsmb2-raw.h

Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,6 +1,7 @@
 smb2dir = $(includedir)/smb2
 dist_smb2_HEADERS = \
 	smb2/libsmb2.h \
+	smb2/libsmb2-raw.h \
 	smb2/smb2.h
 
 dist_noinst_HEADERS = \
