Start adding a SYNC wrapper to the high-level API
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,4 @@
-noinst_PROGRAMS = smb2-ls-async
+noinst_PROGRAMS = smb2-ls-async smb2-ls-sync
 
 AM_CPPFLAGS = \
 	-I$(abs_top_srcdir)/include \
@@ -7,3 +7,4 @@ AM_CPPFLAGS = \
 
 COMMON_LIBS = ../lib/libsmb2.la -lpopt
 smb2_ls_async_LDADD = $(COMMON_LIBS)
+smb2_ls_sync_LDADD = $(COMMON_LIBS)
