Add support for open() pread() and close()
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,5 @@
-noinst_PROGRAMS = smb2-ls-async smb2-ls-sync
+noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
+	smb2-ls-async smb2-ls-sync
 
 AM_CPPFLAGS = \
 	-I$(abs_top_srcdir)/include \
@@ -6,5 +7,7 @@ AM_CPPFLAGS = \
 	"-D_U_=__attribute__((unused))"
 
 COMMON_LIBS = ../lib/libsmb2.la -lpopt
+smb2_cat_async_LDADD = $(COMMON_LIBS)
+smb2_cat_sync_LDADD = $(COMMON_LIBS)
 smb2_ls_async_LDADD = $(COMMON_LIBS)
 smb2_ls_sync_LDADD = $(COMMON_LIBS)
