--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -17,6 +17,7 @@ libsmb2_la_SOURCES = \
 	smb2-logoff.c \
 	smb2-negotiate.c \
 	smb2-query-directory.c \
+	smb2-read.c \
 	smb2-session-setup.c \
 	smb2-tree-connect.c \
 	socket.c \
