Add write() and pwrite() support
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -21,6 +21,7 @@ libsmb2_la_SOURCES = \
 	smb2-read.c \
 	smb2-session-setup.c \
 	smb2-tree-connect.c \
+	smb2-write.c \
 	socket.c \
 	sync.c \
 	timestamps.c \
