--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,6 @@
 noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-ls-async smb2-ls-sync \
+	smb2-put-sync \
 	smb2-stat-sync
 
 AM_CPPFLAGS = \
@@ -12,4 +13,5 @@ smb2_cat_async_LDADD = $(COMMON_LIBS)
 smb2_cat_sync_LDADD = $(COMMON_LIBS)
 smb2_ls_async_LDADD = $(COMMON_LIBS)
 smb2_ls_sync_LDADD = $(COMMON_LIBS)
+smb2_put_sync_LDADD = $(COMMON_LIBS)
 smb2_stat_sync_LDADD = $(COMMON_LIBS)
