Break the file info unmarshalling out into a separate file
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -25,6 +25,7 @@ libsmb2_la_SOURCES = \
 	smb2-cmd-tree-connect.c \
 	smb2-cmd-tree-disconnect.c \
 	smb2-cmd-write.c \
+	smb2-data-file-info.c \
 	socket.c \
 	sync.c \
 	timestamps.c \
