Add SET_INFO support and smb2_truncate[_async]
Add support for the SMB2 SET_INFO command and use it to implement
smb2_truncate[_async]

Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,7 +3,8 @@ noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-put-sync \
 	smb2-raw-stat-async \
 	smb2-raw-getsd-async \
-	smb2-stat-sync
+	smb2-stat-sync \
+	smb2-truncate-sync
 
 AM_CPPFLAGS = \
 	-I$(abs_top_srcdir)/include \
@@ -20,3 +21,4 @@ smb2_put_sync_LDADD = $(COMMON_LIBS)
 smb2_raw_stat_async_LDADD = $(COMMON_LIBS)
 smb2_raw_getsd_async_LDADD = $(COMMON_LIBS)
 smb2_stat_sync_LDADD = $(COMMON_LIBS)
+smb2_truncate_sync_LDADD = $(COMMON_LIBS)
