--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,5 @@
 noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
+	smb2-ftruncate-sync \
 	smb2-ls-async smb2-ls-sync \
 	smb2-put-sync \
 	smb2-raw-stat-async \
@@ -15,6 +16,7 @@ AM_CPPFLAGS = \
 COMMON_LIBS = ../lib/libsmb2.la -lpopt
 smb2_cat_async_LDADD = $(COMMON_LIBS)
 smb2_cat_sync_LDADD = $(COMMON_LIBS)
+smb2_ftruncate_sync_LDADD = $(COMMON_LIBS)
 smb2_ls_async_LDADD = $(COMMON_LIBS)
 smb2_ls_sync_LDADD = $(COMMON_LIBS)
 smb2_put_sync_LDADD = $(COMMON_LIBS)
