query_info: add initial support for query_info(SMB2_0_INFO_FILESYSTEM)
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -2,8 +2,9 @@ noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-ftruncate-sync \
 	smb2-ls-async smb2-ls-sync \
 	smb2-put-sync \
-	smb2-raw-stat-async \
+	smb2-raw-fsstat-async \
 	smb2-raw-getsd-async \
+	smb2-raw-stat-async \
 	smb2-stat-sync \
 	smb2-truncate-sync
 
@@ -20,7 +21,8 @@ smb2_ftruncate_sync_LDADD = $(COMMON_LIBS)
 smb2_ls_async_LDADD = $(COMMON_LIBS)
 smb2_ls_sync_LDADD = $(COMMON_LIBS)
 smb2_put_sync_LDADD = $(COMMON_LIBS)
-smb2_raw_stat_async_LDADD = $(COMMON_LIBS)
+smb2_raw_fsstat_async_LDADD = $(COMMON_LIBS)
 smb2_raw_getsd_async_LDADD = $(COMMON_LIBS)
+smb2_raw_stat_async_LDADD = $(COMMON_LIBS)
 smb2_stat_sync_LDADD = $(COMMON_LIBS)
 smb2_truncate_sync_LDADD = $(COMMON_LIBS)
