--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,10 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR}
                     include
                     include/smb2)
 
-set(CORE_LIBRARIES smb2)
 set(core_DEPENDS ${GSSAPI_LIBRARIES} CACHE STRING "" FORCE)
 
 if(CMAKE_SYSTEM_NAME MATCHES Windows)
-  list(APPEND CORE_LIBRARIES -lws2_32.lib)
+  list(APPEND CORE_LIBRARIES ws2_32.lib)
   add_definitions(-DWIN32_LEAN_AND_MEAN -D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_SECURE_NO_WARNINGS -DHAVE_SOCKADDR_IN6)
   include_directories(include/msvc)
 elseif(CMAKE_SYSTEM_NAME STREQUAL Solaris)
