Enable SMB2 signing :- Sign an outgoing pdu. Use openssl libcrypto to compute the signatures added config checks for openssl headers and library
SMB3 signing is not implemented yet.

Signed-off-by: SARAT KUMAR BEHERA <beherasaratkumar@gmail.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -17,6 +17,7 @@ libsmb2_la_SOURCES = \
 	md5.c \
 	ntlmssp.c \
 	pdu.c \
+	smb2-signing.c \
 	smb2-cmd-close.c \
 	smb2-cmd-create.c \
 	smb2-cmd-echo.c \
