Enable SMB2 signing :- Sign an outgoing pdu.
Use openssl libcrypto to compute the signatures
added config checks for openssl headers and library

SMB3 signing is not implemented yet.

Signed-off-by: SARAT KUMAR BEHERA <beherasaratkumar@gmail.com>
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -17,6 +17,7 @@ libsmb2_la_SOURCES = \
 	md5.c \
 	ntlmssp.c \
 	pdu.c \
+	smb2-signing.c \
 	smb2-cmd-close.c \
 	smb2-cmd-create.c \
 	smb2-cmd-echo.c \
@@ -45,6 +46,7 @@ SOREVISION=0
 SOAGE=0
 libsmb2_la_LDFLAGS = \
 	-version-info $(SOCURRENT):$(SOREVISION):$(SOAGE) -bindir $(bindir) \
-	-no-undefined -export-symbols ${srcdir}/libsmb2.syms $(MAYBE_LIBKRB5)
+	-no-undefined -export-symbols ${srcdir}/libsmb2.syms $(MAYBE_LIBKRB5) \
+	$(MAYBE_LIBCRYPTO)
 
 dist_noinst_DATA = libsmb2.syms
