SMB3 Signing Support:- 	Derive the SMB3 signing key. 	Formulate the AES CMAC 128 algorithm 	Compute the MAC for SMB3.00 and SMB3.02
This doesn't work for SMB3.1. The key derivation requires
the preauth context to be extracted.

Signed-off-by: SARAT KUMAR BEHERA <beherasaratkumar@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -186,7 +186,7 @@ AC_HAVE_LIBRARY(crypt,
 		], [])
 
 # check for openssl/hmac.h openssl/cmac.h openssl/evp.h openssl/sha.h
-AC_CHECK_HEADERS([openssl/hmac.h openssl/cmac.h openssl/evp.h openssl/sha.h openssl/opensslv.h],
+AC_CHECK_HEADERS([openssl/hmac.h openssl/aes.h openssl/evp.h openssl/sha.h openssl/opensslv.h],
                   [],
                   [AC_MSG_WARN([cannot find openssl headers. Building without SEAL support.])
 		  AC_DEFINE(HAVE_OPENSSL_LIBS, 0,
