--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SOURCES aes.c
             smb2-cmd-echo.c
             smb2-cmd-error.c
             smb2-cmd-flush.c
+            smb2-cmd-ioctl.c
             smb2-cmd-logoff.c
             smb2-cmd-negotiate.c
             smb2-cmd-query-directory.c
