--- a/libsmb2.pc.in
+++ b/libsmb2.pc.in
@@ -10,5 +10,5 @@ Description: libsmb2 is a client library for accessing SMB shares over a network
 Version: @VERSION@
 Requires:
 Conflicts:
-Libs: -L${libdir} -lsmb2 @MAYBE_LIBCRYPTO@
+Libs: -L${libdir} -lsmb2
 Cflags: -I${includedir}
