Add some missing sha* files
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -10,7 +10,9 @@ set(SOURCES aes.c
             md5.c
             ntlmssp.c
             pdu.c
+	    sha1.c
 	    sha224-256.c
+	    sha384-512.c
             smb2-cmd-close.c
             smb2-cmd-create.c
             smb2-cmd-echo.c
