--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -19,7 +19,9 @@ libsmb2_la_SOURCES = \
 	md5.c \
 	ntlmssp.c \
 	pdu.c \
+	sha1.c \
 	sha224-256.c \
+	sha384-512.c \
 	smb2-cmd-close.c \
 	smb2-cmd-create.c \
 	smb2-cmd-echo.c \
