--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -42,6 +42,7 @@ libsmb2_la_SOURCES = \
 	smb2-cmd-write.c \
 	smb2-data-file-info.c \
 	smb2-data-filesystem-info.c \
+	smb2-data-reparse-point.c \
 	smb2-data-security-descriptor.c \
 	smb2-share-enum.c \
 	smb2-signing.c \
