--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -6,6 +6,7 @@ noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-raw-fsstat-async \
 	smb2-raw-getsd-async \
 	smb2-raw-stat-async \
+	smb2-readlink \
 	smb2-share-enum \
 	smb2-stat-sync \
 	smb2-statvfs-sync \
@@ -28,6 +29,7 @@ smb2_put_sync_LDADD = $(COMMON_LIBS)
 smb2_raw_fsstat_async_LDADD = $(COMMON_LIBS)
 smb2_raw_getsd_async_LDADD = $(COMMON_LIBS)
 smb2_raw_stat_async_LDADD = $(COMMON_LIBS)
+smb2_readlink_LDADD = $(COMMON_LIBS)
 smb2_share_enum_LDADD = $(COMMON_LIBS)
 smb2_stat_sync_LDADD = $(COMMON_LIBS)
 smb2_statvfs_sync_LDADD = $(COMMON_LIBS)
