--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -46,6 +46,7 @@ libsmb2_la_SOURCES = \
 	smb2-data-reparse-point.c \
 	smb2-data-security-descriptor.c \
 	smb2-share-enum.c \
+	smb3-seal.c \
 	smb2-signing.c \
 	socket.c \
 	sync.c \
