--- a/configure.ac
+++ b/configure.ac
@@ -27,48 +27,10 @@ CFLAGS="${CFLAGS} -D_FILE_OFFSET_BITS=64"
 #option: examples
 AC_ARG_ENABLE([examples],
               [AC_HELP_STRING([--enable-examples],
-                              [Build example programs])],
-	      [ENABLE_EXAMPLES=$enableval],
-	      [ENABLE_EXAMPLES="no"])
+                              [Build example programs])])
 
-# We need popt to compile the examples
-if test x$ENABLE_EXAMPLES = xyes; then
-AC_MSG_CHECKING(whether libpopt is available)
-ac_save_CFLAGS="$CFLAGS"
-ac_save_LIBS="$LIBS"
-CFLAGS="$CFLAGS $GLIB_CFLAGS"
-LIBS="$GLIB_LIBS $LIBS -lpopt"
-AC_TRY_RUN([
-/*
- * Just see if we can compile/link with popt
- */
-#include <popt.h>
-
-int main(int argc, const char *argv[])
-{
-	struct poptOption popt_options[] = {
-		POPT_TABLEEND
-	};
-	poptGetContext(argv[0], argc, argv, popt_options, POPT_CONTEXT_KEEP_FIRST);
-
-	return 0;
-}
-], ac_cv_have_popt=yes, ac_cv_have_popt=no,
-   [echo $ac_n "compile with POPT. Assuming OK... $ac_c"
-    ac_cv_have_popt=yes])
-CFLAGS="$ac_save_CFLAGS"
-LIBS="$ac_save_LIBS"
-if test "$ac_cv_have_popt" = yes ; then
-  AC_MSG_RESULT(yes)
-  MAYBE_EXAMPLES="examples"
-else
-  AC_MSG_RESULT(no)
-  AC_MSG_NOTICE(You need libpopt to compile the sample libsmb2 clients.)
-  AC_MSG_NOTICE(Only the library will be compiled and installed.)
-fi
-fi
-
-AC_SUBST(MAYBE_EXAMPLES)
+AM_CONDITIONAL([ENABLE_EXAMPLES],
+               [test "$enable_examples" = "yes"])
 
 AC_ARG_WITH([libkrb5],
     AS_HELP_STRING([--without-libkrb5], [Do not link with libkrb5 and use builtin NTLMSSP module for authentication instead.]))
