--- a/configure.ac
+++ b/configure.ac
@@ -49,7 +49,7 @@ AC_ARG_ENABLE([werror],
               [AS_HELP_STRING([--disable-werror],
               [Disables building with -Werror by default])])
 
-if test "$ac_cv_prog_gcc" = yes; then
+if test "$GCC" = yes; then
    WARN_CFLAGS="-Wall -Wshadow -Wno-write-strings -Wstrict-prototypes -Wpointer-arith -Wcast-align -Wno-strict-aliasing"
    if test "x$enable_werror" != "xno"; then
        WARN_CFLAGS="$WARN_CFLAGS -Werror"
