--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -7,6 +7,7 @@ noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-raw-getsd-async \
 	smb2-raw-stat-async \
 	smb2-readlink \
+	smb2-lsa-lookupsids \
 	smb2-share-enum \
 	smb2-share-info \
 	smb2-stat-sync \
@@ -31,6 +32,7 @@ smb2_raw_fsstat_async_LDADD = $(COMMON_LIBS)
 smb2_raw_getsd_async_LDADD = $(COMMON_LIBS)
 smb2_raw_stat_async_LDADD = $(COMMON_LIBS)
 smb2_readlink_LDADD = $(COMMON_LIBS)
+smb2_lsa_lookupsids_LDADD = $(COMMON_LIBS)
 smb2_share_enum_LDADD = $(COMMON_LIBS)
 smb2_share_info_LDADD = $(COMMON_LIBS)
 smb2_stat_sync_LDADD = $(COMMON_LIBS)
