dcerpc: massive updates to dcerpc and lsa
Make it possible to both encode and decode request and response messages
thus making it possible to do the marshalling a server would need
and not just client only marshalling (i.e. encode requests/decode replies)

Add a test program that tests encoding/decoding of the LSA function
and fix a lot of bugs in the dcerpc layer now that we try to do marshalling
both ways for all requests/replies.

Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,5 @@
 noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
+	smb2-dcerpc-coder-test \
 	smb2-ftruncate-sync \
 	smb2-ls-async smb2-ls-sync \
 	smb2-put-async \
@@ -24,6 +25,7 @@ COMMON_LIBS = ../lib/libsmb2.la
 smb2_cat_async_LDADD = $(COMMON_LIBS)
 smb2_cat_sync_LDADD = $(COMMON_LIBS)
 smb2_ftruncate_sync_LDADD = $(COMMON_LIBS)
+smb2_dcerpc_coder_test_LDADD = $(COMMON_LIBS)
 smb2_ls_async_LDADD = $(COMMON_LIBS)
 smb2_ls_sync_LDADD = $(COMMON_LIBS)
 smb2_put_async_LDADD = $(COMMON_LIBS)
