ps2: support for ps2 EE environment
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -12,6 +12,8 @@ libsmb2_la_SOURCES = \
 	aes128ccm.h \
 	aes128ccm.c \
 	alloc.c \
+	compat.c \
+	compat.h \
 	dcerpc.c \
 	dcerpc-lsa.c \
 	dcerpc-srvsvc.c \
