Update Readme instructions for PS3

--- a/lib/Makefile.PS3_PPU
+++ b/lib/Makefile.PS3_PPU
@@ -72,7 +72,7 @@ export INCLUDES	=	$(foreach dir,$(INCLUDE),-I$(CURDIR)/$(dir)) \
 
 $(BUILD):
 	@[ -d $@ ] || mkdir -p $@
-	@make --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile
+	@make --no-print-directory -C $(BUILD) -f $(CURDIR)/Makefile.PS3_PPU
 
 install: $(BUILD)
 	@echo Copying...
