--- a/lib/Makefile.PS2_EE
+++ b/lib/Makefile.PS2_EE
@@ -55,8 +55,19 @@ EE_OBJS = aes128ccm.o \
 
 all: $(EE_LIB) $(EE_OBJS)
 
+install: all
+ifeq ($(PS2SDK),)
+	@echo "$PS2SDK is not set. Can not install libsmb2."
+	@exit 1
+endif
+	@echo Copying...
+	@[ -d $(PS2SKD)/ee/include/smb2 ] || mkdir -p $(PS2SDK)/ee/include/smb2
+	@cp -frv ../include/smb2/*.h $(PS2SDK)/ee/include/smb2
+	@cp -frv *.a $(PS2SDK)/ee/lib
+	@echo Done!
+
 clean:
-	rm -rf $(EE_LIB) $(EE_OBJS)
+	rm -rf *.a $(EE_OBJS)
 
 reset:
 	ps2client reset
