--- a/lib/Makefile.PS2_EE
+++ b/lib/Makefile.PS2_EE
@@ -1,9 +1,9 @@
 EE_CFLAGS = -DPS2_EE_PLATFORM -DHAVE_STDINT_H -DHAVE_STRING_H \
 	  -DHAVE_STDLIB_H -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H \
-	  -D_U_=/**/
+	  -D_U_=/**/ -I../include -I../include/smb2
 
 EE_LIB = libsmb2.a
-EE_INCS = -I../include -I../include/smb2
+EE_INCS = 
 EE_OBJS = aes128ccm.o \
 	aes.o \
 	alloc.o \
