--- a/lib/Makefile.PS2_EE_IP
+++ b/lib/Makefile.PS2_EE_IP
@@ -2,7 +2,7 @@ EE_CFLAGS = -DPS2_EE_PLATFORM -DHAVE_STDINT_H -DHAVE_STRING_H \
 	  -DHAVE_STDLIB_H -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H \
 	  -D_U_=/**/ -I../include -I../include/smb2
 
-EE_LIB = libsmb2.a
+EE_LIB = libsmb2_ip.a
 EE_INCS = 
 EE_OBJS = aes128ccm.o \
 	aes.o \
