--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+if(NOT ESP_PLATFORM)
+
 cmake_minimum_required(VERSION 3.2)
 
 project(libsmb2
@@ -69,3 +71,74 @@ install(FILES cmake/FindSMB2.cmake
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/libsmb2.pc
         DESTINATION ${INSTALL_PKGCONFIG_DIR})
+
+else() ##### ESP_PLATFORM
+
+if(NOT CMAKE_BUILD_EARLY_EXPANSION)
+    add_definitions(-DHAVE_CONFIG_H)
+endif()
+
+
+set(COMPONENT_ADD_INCLUDEDIRS
+    "lib"
+    include
+    include/smb2
+    include/esp
+    )
+
+set(COMPONENT_SRCS
+    lib/aes.c
+    lib/aes128ccm.c
+    lib/alloc.c
+    lib/dcerpc.c
+    lib/dcerpc-lsa.c
+    lib/dcerpc-srvsvc.c
+    lib/errors.c
+    lib/init.c
+    lib/hmac.c
+    lib/hmac-md5.c
+    lib/krb5-wrapper.c
+    lib/libsmb2.c
+    lib/md4c.c
+    lib/md5.c
+    lib/ntlmssp.c
+    lib/pdu.c
+    lib/sha1.c
+    lib/sha224-256.c
+    lib/sha384-512.c
+    lib/smb2-cmd-close.c
+    lib/smb2-cmd-create.c
+    lib/smb2-cmd-echo.c
+    lib/smb2-cmd-error.c
+    lib/smb2-cmd-flush.c
+    lib/smb2-cmd-ioctl.c
+    lib/smb2-cmd-logoff.c
+    lib/smb2-cmd-negotiate.c
+    lib/smb2-cmd-query-directory.c
+    lib/smb2-cmd-query-info.c
+    lib/smb2-cmd-read.c
+    lib/smb2-cmd-session-setup.c
+    lib/smb2-cmd-set-info.c
+    lib/smb2-cmd-tree-connect.c
+    lib/smb2-cmd-tree-disconnect.c
+    lib/smb2-cmd-write.c
+    lib/smb2-data-file-info.c
+    lib/smb2-data-filesystem-info.c
+    lib/smb2-data-security-descriptor.c
+    lib/smb2-data-reparse-point.c
+    lib/smb2-share-enum.c
+    lib/smb3-seal.c
+    lib/smb2-signing.c
+    lib/socket.c
+    lib/sync.c
+    lib/timestamps.c
+    lib/unicode.c
+    lib/usha.c
+
+    lib/compat.c)
+
+set(COMPONENT_NAME ".")
+
+register_component()
+
+endif() ##### ESP_PLATFORM
