--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -36,11 +36,12 @@ jobs:
     - name: Build (MSVC)
       run: |
         cmake --build .
-Jobs:
-  build:
-    runs-on: ubuntu-latest
-    container: ps2dev/ps2dev:latest
-    steps:
+
+  build-PS2:
+   name: PS2 BUILD
+   runs-on: ubuntu-latest
+   container: ps2dev/ps2dev:latest
+   steps:
     
     - name: Install dependencies
       run: |
