--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -23,6 +23,17 @@ jobs:
       run: |
        cd lib 
         
+    - name: sudo -s
+    - run: |
+       sudo -s
+   
+    - name: export
+    - run: |
+       export PS2DEV=/usr/local/ps2dev
+       export PS2SDK=$PS2DEV/ps2sdk
+       export GSKIT=$PS2DEV/gsKit
+       export PATH=$PATH:$PS2DEV/bin:$PS2DEV/ee/bin:$PS2DEV/iop/bin:$PS2DEV/dvp/bin:$PS2SDK/bin
+    
     - name: Compile libsmb2
       run: |
          make -f Makefile.PS2_IOP clean
