--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -25,7 +25,7 @@ jobs:
         
     - name: Compile libsmb2
       run: |
-         make -f Makefile.PS2_IOP clean
+         make -f Makefile.PS2_IOP clean && make -f Makefile.PS2_IOP install
 
     - name: Get short SHA
       id: slug
