--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     container: ps2dev/ps2dev:latest
     steps:
+    
     - name: Install dependencies
       run: |
         apk add build-base git zip
@@ -19,18 +20,12 @@ jobs:
     - run: |
         git fetch --prune --unshallow
     
-    - name: cd 
-    - run: |
-          cd lib   
-    
     - name: Compile libsmb2
       run: |
-         make all 
+         cd lib
+         make -f Makefile.PS2_IOP clean
+         make -f Makefile.PS2_IOP clean
     
-    - name: Get short SHA
-      id: slug
-      run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
-
     - name: Upload artifacts
       if: ${{ success() }}
       uses: actions/upload-artifact@v2
