--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
          cd lib
          make -f Makefile.PS2_IOP clean
-         make -f Makefile.PS2_IOP clean
+         make -f Makefile.PS2_IOP install
     
     - name: Upload artifacts
       if: ${{ success() }}
