--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -20,11 +20,17 @@ jobs:
     - run: |
         git fetch --prune --unshallow
     
-    - name: Compile libsmb2
+    - name: Complie libsmb2 EE
+    - run: |
+        cd lib
+        make -C Makefile.PS2_EE clean
+        make -C Makefile.PS2_EE all
+    
+    - name: Compile libsmb2 IOP
       run: |
          cd lib
-         make -f Makefile.PS2_IOP clean
-         make -f Makefile.PS2_IOP install
+         make -C Makefile.PS2_IOP clean
+         make -C Makefile.PS2_IOP all
     
     - name: Upload artifacts
       if: ${{ success() }}
