add test tool for smb2_rename
Signed-off-by: Ronnie Sahlberg <ronniesahlberg@gmail.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -14,7 +14,8 @@ noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-share-info \
 	smb2-stat-sync \
 	smb2-statvfs-sync \
-	smb2-truncate-sync
+	smb2-truncate-sync \
+	smb2-rename-sync
 
 AM_CPPFLAGS = \
 	-I$(abs_top_srcdir)/include \
@@ -42,3 +43,4 @@ smb2_share_info_LDADD = $(COMMON_LIBS)
 smb2_stat_sync_LDADD = $(COMMON_LIBS)
 smb2_statvfs_sync_LDADD = $(COMMON_LIBS)
 smb2_truncate_sync_LDADD = $(COMMON_LIBS)
+smb2_rename_sync_LDADD = $(COMMON_LIBS)
