--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -32,8 +32,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Cmake configure
       run: |
-        cmake -G
-        cmake -G "Visual Studio Enterprise 2022" .
+        cmake -G "Visual Studio 17 2022" .
     - name: Build (MSVC)
       run: |
         cmake --build .
