--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -15,7 +15,8 @@ noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-stat-sync \
 	smb2-statvfs-sync \
 	smb2-truncate-sync \
-	smb2-rename-sync
+	smb2-rename-sync \
+	smb2-CMD-FIND
 
 AM_CPPFLAGS = \
 	-I$(abs_top_srcdir)/include \
@@ -44,3 +45,4 @@ smb2_stat_sync_LDADD = $(COMMON_LIBS)
 smb2_statvfs_sync_LDADD = $(COMMON_LIBS)
 smb2_truncate_sync_LDADD = $(COMMON_LIBS)
 smb2_rename_sync_LDADD = $(COMMON_LIBS)
+smb2_CMD_FIND_LDADD = $(COMMON_LIBS)
