--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,8 +104,11 @@ if(NOT ESP_PLATFORM)
 
     include_directories(${CMAKE_CURRENT_BINARY_DIR}
                         include
-                        include/smb2
-                        ${OPENSSL_INCLUDE_DIR})
+                        include/smb2)
+    
+    if(OPENSSL_FOUND)
+      include_directories(${OPENSSL_INCLUDE_DIR})
+    endif()
 
     set(core_DEPENDS ${GSSAPI_LIBRARIES} CACHE STRING "" FORCE)
 
