--- a/lib/Makefile.PS3_PPU
+++ b/lib/Makefile.PS3_PPU
@@ -38,7 +38,7 @@ DATA		:=	data
 LIBS		:=	
 
 MACHDEP		:= -DPS3_PPU_PLATFORM -DHAVE_STDINT_H -DHAVE_STRING_H \
-				-DHAVE_STDLIB_H -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H -D_U_=/**/
+				-DHAVE_STDLIB_H -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H -DHAVE_TIME_H -D_U_=/**/
 
 CFLAGS		+= -O2 -Wall -mcpu=cell $(MACHDEP) -fno-strict-aliasing $(INCLUDES)
 
