Add missing HAVE_TIME_H and add HAVE_FCNTL_H

--- a/configure.ac
+++ b/configure.ac
@@ -123,6 +123,9 @@ AC_CHECK_HEADERS([time.h])
 dnl  Check for strings.h
 AC_CHECK_HEADERS([strings.h])
 
+dnl  Check for fcntl.h
+AC_CHECK_HEADERS([fcntl.h])
+
 dnl  Check if sockaddr data struct includes a "sa_len"
 AC_CHECK_MEMBER([struct sockaddr.sa_len], [
     AC_DEFINE([HAVE_SOCKADDR_LEN], [1], [Whether sockaddr struct has sa_len])
