--- a/lib/Makefile.PS2_EE
+++ b/lib/Makefile.PS2_EE
@@ -1,5 +1,5 @@
 EE_CFLAGS = -DPS2_EE_PLATFORM -DHAVE_STDINT_H -DHAVE_STRING_H \
-	  -DHAVE_STDLIB_H -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H -DHAVE_SYS_STAT_H -DHAVE_TIME_H \
+	  -DHAVE_STDLIB_H -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H -DHAVE_SYS_STAT_H -DHAVE_TIME_H -DHAVE_FCNTL \
 	  -D_U_=/**/ -I../include -I../include/smb2
 
 EE_LIB = libsmb2.a
