--- a/lib/Makefile.DC_KOS
+++ b/lib/Makefile.DC_KOS
@@ -1,6 +1,6 @@
-KOS_CFLAGS = -DDC_KOS_PLATFORM -DNEED_BE64TOH -DHAVE_STDINT_H -DHAVE_STRING_H \
-	  -DHAVE_STDLIB_H -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H -DHAVE_SYS_STAT_H -DHAVE_TIME_H \
-	  -DHAVE_SYS_SOCKET_H \
+KOS_CFLAGS = -DDC_KOS_PLATFORM -DNEED_WRITEV -DNEED_READV -DHAVE_STDINT_H -DHAVE_STRING_H \
+	  -DHAVE_SYS_TYPES_H -DHAVE_UNISTD_H -DHAVE_SYS_STAT_H -DHAVE_TIME_H -DHAVE_NETINET_IN_H \
+	  -DHAVE_SYS_SOCKET_H -D HAVE_NETDB_H -DHAVE_POLL_H -DHAVE_STDLIB_H \
 	  -D_U_=/**/ -I../include -I../include/smb2 $(KOS_INC_PATHS)
 
 TARGET = libsmb2.a
@@ -53,5 +53,16 @@ OBJS = aes128ccm.o \
 	socket.o \
 	sync.o
 
+install: defaultall
+ifeq ($(KOS_BASE),)
+	@echo "$KOS_BASE is not set. Can not install libsmb2."
+	@exit 1
+endif
+	@echo Copying...
+	@[ -d $(KOS_BASE)/addons/include/smb2 ] || mkdir -p $(KOS_BASE)/addons/include/smb2
+	@cp -frv ../include/smb2/*.h $(KOS_BASE)/addons/include/smb2
+	@chmod 0644 $(TARGET)
+	@cp -frv $(TARGET) $(KOS_BASE)/addons/lib/dreamcast
+	@echo Done!
 
 include ${KOS_PORTS}/scripts/lib.mk
